--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,20 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.10' // or the latest version
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.12'
+        //classpath 'com.google.gms:google-services:4.2.0'
+
+
     }
 }
+
 
 allprojects {
     repositories {
@@ -27,3 +32,4 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
